--- a/main.css
+++ b/main.css
@@ -17,27 +17,43 @@ body {
   line-height: 1.5;
 }
 
-.hero {
-  max-width: 1000px;
-  margin: 0 auto;
-}
-
-.container {
-  max-width: 800px;
-  margin: 0 auto;
-}
-
 img {
   max-width: 100%;
+}
+
+em {
+  font-weight: 700;
+  color: #ee3e97;
+  font-style: normal;
+}
+
+header {
+  margin-top: 20px;
 }
 
 nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin: 0 60px;
+  border-bottom: 2px solid #facbe3;
+  position: relative;
 }
 
-nav > a {
+nav:after {
+  padding: 0;
+  margin: 0;
+  display: block;
+  content: "";
+  width: 50%;
+  height: 2px;
+  background-color: white;
+  position: absolute;
+  right: 0;
+  bottom: -2px;
+}
+
+nav a {
   text-decoration: none;
   color: #313131;
   padding: 10px 20px;
@@ -48,12 +64,30 @@ nav a:hover {
   border-bottom: 3px solid #ee3e97;
 }
 
-span.pink {
-  font-weight: 700;
-  color: #ee3e97;
+nav a:last-child {
+  margin-left: auto;
+  color: #a7a7a7;
+  font-size: 1.2em;
 }
 
-h1 {
+nav a:last-child:hover {
+  border-bottom: 0;
+}
+
+.hero {
+  max-width: 1000px;
+  margin: 0 auto;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10px;
+}
+
+.hero h1 {
   font-size: 34px;
 }
 
@@ -62,7 +96,7 @@ h1 {
   margin-bottom: 30px;
 }
 
-.button {
+.hero .button {
   padding: 10px 40px;
   border-radius: 5px;
   font-weight: 700;
@@ -72,31 +106,9 @@ h1 {
   font-size: 22px;
 }
 
-.hero {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-header {
-  margin-top: 20px;
-}
-
 .container {
-  overflow: hidden;
-}
-
-.container img {
-  width: 50%;
-}
-
-.container section img {
-  -ms-grid-column-align: center;
-      justify-self: center;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 .container section {
@@ -107,12 +119,20 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin: 40px 0;
 }
 
-header nav a:last-child {
-  margin-left: auto;
-  color: #a7a7a7;
-  font-size: 1.2em;
+.container section p {
+  padding: 15px;
+}
+
+.container section img {
+  -ms-grid-column-align: center;
+      justify-self: center;
+}
+
+.container img {
+  width: 100%;
 }
 
 footer {
@@ -123,38 +143,68 @@ footer {
   margin-top: 100px;
 }
 
-.container section {
-  margin: 40px 0;
+@media screen and (max-width: 1150px) {
+  nav {
+    margin: 0 10px;
+  }
+  body {
+    font-size: 16px;
+  }
 }
 
-nav {
-  margin: 0 60px;
+@media screen and (max-width: 750px) {
+  .hero {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: auto;
+        grid-template-rows: auto;
+        grid-template-areas: "top" "bottom";
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    justify-items: center;
+    padding: 10px;
+  }
+  .hero h1 {
+    font-size: 28px;
+  }
+  .hero p {
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+  .hero img {
+    max-width: 400px;
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    grid-area: top;
+  }
+  .hero .button {
+    padding: 5px 25px;
+    color: white;
+    font-size: 18px;
+  }
 }
 
-.container section p {
-  padding: 15px;
-}
-
-nav {
-  border-bottom: 2px solid #f9c5df;
-  position: relative;
-}
-
-nav:after {
-  padding: 0;
-  margin: 0;
-  display: block;
-  /* probably not really needed? */
-  content: "";
-  width: 50%;
-  height: 2px;
-  background-color: white;
-  position: absolute;
-  right: 0;
-  bottom: -2px;
-}
-
-nav a:last-child:hover {
-  border-bottom: 0;
+@media screen and (max-width: 600px) {
+  nav:after {
+    display: none;
+  }
+  .container {
+    max-width: 800px;
+    margin: 0 auto;
+  }
+  .container section {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    margin: 30px 0;
+  }
+  .container section:nth-child(2) {
+        grid-template-areas: "top" "bottom";
+  }
+  .container section:nth-child(2) img {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    grid-area: top;
+  }
 }
 /*# sourceMappingURL=main.css.map */
