--- a/main.scss
+++ b/main.scss
@@ -1,3 +1,6 @@
+$text-color: #606060;
+$main-color: #ee3e97;
+$main-color-light: lighten($main-color, 30%);
 * {
     box-sizing: border-box;
     margin: 0;
@@ -9,79 +12,96 @@ html {
 body {
     font-family: 'Lora', system-ui, sans-serif;
     min-height: 100%;
-    color: #606060;
+    color: $text-color;
     font-size: 17px;
     line-height: 1.5;
-}
-.hero {
-    max-width: 1000px;
-    margin: 0 auto;
-}
-.container {
-    max-width: 800px;
-    margin: 0 auto;
 }
 img {
     max-width: 100%;
 }
-nav {
-    display: flex;
-}
-nav > a {
-    text-decoration: none;
-    color: #313131;
-    padding: 10px 20px;
-}
-nav a:hover {
-    color: #ee3e97;
-    border-bottom: 3px solid #ee3e97;
-}
-span.pink {
+em {
     font-weight: 700;
-    color: #ee3e97;
-}
-h1 {
-    font-size: 34px;
-}
-.hero p {
-    font-size: 28px;
-    margin-bottom: 30px;
-}
-.button {
-    padding: 10px 40px;
-    border-radius: 5px;
-    font-weight: 700;
-    text-decoration: none;
-    background-color: #ee3e97;
-    color: white;
-    font-size: 22px;
-}
-.hero {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
+    color: $main-color;
+    font-style: normal;
 }
 header {
     margin-top: 20px;
 }
-.container {
-    overflow: hidden;
+nav {
+    display: flex;
+    margin: 0 60px;
+    border-bottom: 2px solid $main-color-light;
+    position: relative;
+    &:after {
+        padding:0;margin:0;display:block;
+        content: "";
+        width:50%;
+        height:2px;
+        background-color:white;
+        position: absolute;
+        right:0;
+        bottom:-2px;
+    }
+    a {
+        text-decoration: none;
+        color: #313131;
+        padding: 10px 20px;
+        &:hover {
+            color: $main-color;
+            border-bottom: 3px solid $main-color;
+        }
+        &:last-child {
+            margin-left: auto;
+            color: #a7a7a7;
+            font-size: 1.2em;
+            &:hover {
+                border-bottom: 0;
+            }
+        }
+    }
 }
-.container img {
-    width: 50%;
-}
-.container section img {
-    justify-self: center;
-}
-.container section {
+.hero {
+    max-width: 1000px;
+    margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
+    padding: 10px;
+    h1 {
+        font-size: 34px;
+    }
+    p {
+        font-size: 28px;
+        margin-bottom: 30px;
+    }
+    .button {
+        padding: 10px 40px;
+        border-radius: 5px;
+        font-weight: 700;
+        text-decoration: none;
+        background-color: $main-color;
+        color: white;
+        font-size: 22px;
+    }
 }
-header nav a:last-child {
-    margin-left: auto;
-    color: #a7a7a7;
-    font-size: 1.2em;
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    section {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+        margin: 40px 0;
+        p {
+            padding: 15px;
+        }
+        img {
+            justify-self: center;
+        }
+    }
+    img {
+        width: 100%;
+    }
 }
 footer {
     height: 150px;
@@ -90,29 +110,61 @@ footer {
     background-size: cover;
     margin-top: 100px;
 }
-.container section {
-    margin: 40px 0;
+
+@media screen and (max-width: 1150px) {
+    nav {
+        margin: 0 10px;
+    }
+    body {
+        font-size: 16px;
+    }
 }
-nav {
-    margin: 0 60px;
+@media screen and (max-width: 750px) {
+    .hero {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        grid-template-areas:
+            "top"
+            "bottom";
+        align-items: center;
+        justify-items: center;
+        padding: 10px;
+        h1 {
+            font-size: 28px;
+        }
+        p {
+            font-size: 20px;
+            margin-bottom: 20px;
+        }
+        img {
+            max-width: 400px;
+            grid-area: top;
+        }
+        .button {
+            padding: 5px 25px;
+            color: white;
+            font-size: 18px;
+        }
+    }
 }
-.container section p {
-    padding: 15px;
-}
-nav {
-    border-bottom: 2px solid #f9c5df;
-    position: relative;
-}
-nav:after {
-    padding:0;margin:0;display:block;/* probably not really needed? */
-    content: "";
-    width:50%;
-    height:2px;
-    background-color:white;
-    position: absolute;
-    right:0;
-    bottom:-2px;
-}
-nav a:last-child:hover {
-    border-bottom: 0;
+@media screen and (max-width: 600px) {
+    nav:after {
+        display: none;
+    }
+    .container {
+        max-width: 800px;
+        margin: 0 auto;
+        section {
+            grid-template-columns: 1fr;
+            margin: 30px 0;
+            &:nth-child(2) {
+                grid-template-areas:
+                    "top"
+                    "bottom";
+                img {
+                    grid-area: top;
+                }
+            }
+        }
+    }
 }
