UPDATE footer styles

--- a/main.scss
+++ b/main.scss
@@ -116,6 +116,14 @@ footer {
     background-repeat: no-repeat;
     background-size: cover;
     margin-top: 100px;
+    display: flex;
+    justify-content: center;
+    p {
+        align-self: center;
+        text-align: center;
+        font-size: 0.8rem;
+        color: white;
+    }
 }
 
 @media screen and (max-width: 1150px) {
