--- a/main.css
+++ b/main.css
@@ -150,6 +150,21 @@ footer {
   background-repeat: no-repeat;
   background-size: cover;
   margin-top: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+footer p {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  text-align: center;
+  font-size: 0.8rem;
+  color: white;
 }
 
 @media screen and (max-width: 1150px) {
