--- a/main.css
+++ b/main.css
@@ -182,7 +182,7 @@ footer p {
         grid-template-columns: 1fr;
     -ms-grid-rows: auto;
         grid-template-rows: auto;
-        grid-template-areas: "top" "bottom";
+        grid-template-areas: "top";
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -249,7 +249,7 @@ footer p {
     margin: 30px 0;
   }
   .container section:nth-child(2) {
-        grid-template-areas: "top" "bottom";
+        grid-template-areas: "top";
   }
   .container section:nth-child(2) img {
     -ms-grid-row: 1;
